# extract_sv_reads

./: .travis.yml  CMakeLists.txt  LICENSE.txt  NOTICE.md  PackageInfo.cmake  README.md
cmake/: BuildHtslib.cmake
debian/: postinst.in  prerm.in
integration-test/: CMakeLists.txt  extract_sv_reads_test.py  process_splitters_test.py
src/exe/extract_sv_reads/: CMakeLists.txt  extract_sv_reads.cpp
src/exe/process_splitters/: CMakeLists.txt  process_splitters.cpp
src/lib/extract_sv_reads/: Alignment.hpp  AlignmentOffsets.cpp  AlignmentOffsets.hpp  BamTransform.hpp  CMakeLists.txt  Options.cpp  Options.hpp  Parse.hpp  SamReader.hpp  SamWriter.hpp  ShrunkSamWriter.hpp  ThreadPool.hpp  Utility.cpp  Utility.hpp
src/lib/process_splitters/: Alignment.hpp  AlignmentOffsets.cpp  AlignmentOffsets.hpp  CMakeLists.txt  Options.cpp  Options.hpp  SamReader.hpp  SamWriter.hpp  Utility.cpp  Utility.hpp
test-data/: TestData.hpp.in  expected_nodups.discordants.sorted.shrunk.bam  expected_nodups.splitters.sorted.bam  expected_nodups.splitters.sorted.shrunk.bam  expected_wdups.discordants.sorted.bam  integration_test.bam  integration_test_w_neg_sa.bam  new_splitter.bam  new_splitter.cram
test/lib/process_splitters/: CMakeLists.txt  TestAlignment.cpp  TestAlignmentOffsets.cpp  TestBamTransform.cpp  TestParse.cpp  TestSamReader.cpp
test/testing/: TestBamRecords.hpp
